# Mean_Field_Generator

./: #find_mass.cpp#  #read_his.cpp#  CMakeLists.txt  Cross_Sections_edit.cpp  MF_generator.cpp  README.md  energy_axis  find_mass.cpp  find_mass.cpp~  generator.cpp  histograms.cpp  momentum_axis  pseudo_skim_tree.cpp~  read_his.cpp  spec_info.cpp  spec_integral.cpp  spectral_interpolation.cpp
include/: find_close.h  spec_info.h
old/: CSV_reader.cpp  echelon.cpp  es_input.cpp  find_close.cpp  find_mass.cpp  k_input.cpp  my_old_spline_baby.cpp  my_old_spline_baby.cpp~  spec_int  spline  spline.cpp
old/old_include/: CSV_reader.h  echelon.h  es_input.h  k_input.h
